# low-access-app

./: .gitattributes  .gitignore  .yarnrc.yml  LICENSE  README.md  package.json
.github/workflows/: build-desktop.yml
apps/expo/: app.config.js  babel.config.js  metro.config.js  package.json
apps/expo/app/: _layout.tsx
apps/tauri/: package.json
apps/tauri/src-tauri/: Cargo.toml  tauri.conf.json
apps/tauri/src-tauri/capabilities/: default.json
apps/tauri/src-tauri/src/: lib.rs  main.rs  oauth.rs  oauth_callback.html
